# nucleus-object

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
documentation/: Nucleus_ClassTypeState.md  Nucleus_ObjectEnumerator.md  Nucleus_ObjectEnumerator_getObject.md  Nucleus_ObjectEnumerator_hasObject.md  Nucleus_ObjectEnumerator_nextObject.md  Nucleus_addClassType.md  Nucleus_addSignal.md  ReferenceCountedObject.md  index.md  tutorial.md
documentation/Patterns/: enumerable-collection.md  enumerator.md
test/: CMakeLists.txt
test/DynamicLibraryManager/: CMakeLists.txt
test/DynamicLibraryManager/ClientA/: CMakeLists.txt
test/DynamicLibraryManager/ClientA/src/Nucleus.Object.Test.DynamicLibraryManager.ClientA/: ClientA.c
test/DynamicLibraryManager/ClientB/: CMakeLists.txt
test/DynamicLibraryManager/Host/: CMakeLists.txt
test/DynamicLibraryManager/Host/src/Nucleus.Object.Test.DynamicLibraryManager/: Main.c
test/Signals/: CMakeLists.txt
test/Signals/src/Nucleus.Object.Test.Signals/: A.c  A.h  Main.c  testExpicitDisconnect.c  testExplicitDisconnect.h  testObjectCreation.c  testObjectCreation.h  testObjectDestruction.c  testObjectDestruction.h  testTypeConstruction.c  testTypeConstruction.h
test/TypeSystem/: CMakeLists.txt
test/TypeSystem/src/Nucleus.Object.Test.TypeSystem/: Main.c
test/Types/: CMakeLists.txt
test/Types/src/Nucleus.Object.Test.Types/: Main.c
tools/: CMakeLists.txt
tools/Generator/: CMakeLists.txt
tools/Generator/src/Nucleus/Media/Tools/: Main.c
